// Use protos/gen.sh to generate .pb.go files.
syntax = "proto3";

package pb;
option go_package = "github.com/feichai0017/NoKV/pb";

message KV {
  bytes key = 1;
  bytes value = 2;
  bytes user_meta = 3;
  uint64 version = 4;
  uint64 expires_at = 5;
  bytes meta = 6;

  // Stream id is used to identify which stream the KV came from.
  uint32 stream_id = 10;
}

message KVList {
  repeated KV kv = 1;
}

message ManifestChangeSet {
        // A set of changes that are applied atomically.
        repeated ManifestChange changes = 1;
}

message ManifestChange {
        uint64 Id = 1;
        enum Operation {
                CREATE = 0;
                DELETE = 1;
        }
        Operation Op   = 2;
        uint32 Level   = 3; // Only used for CREATE
        bytes Checksum = 4; // Only used for CREATE
}
message TableIndex{
        repeated BlockOffset offsets = 1;
        bytes  bloomFilter = 2;
        uint64 maxVersion = 3;
        uint32 keyCount = 4;
        uint32 staleDataSize = 5;
}

message BlockOffset{
        bytes key = 1;
        uint32 offset = 2;
        uint32 len = 3;
}

message RegionPeer {
  uint64 store_id = 1;
  uint64 peer_id = 2;
}

message RegionMeta {
  uint64 id = 1;
  bytes start_key = 2;
  bytes end_key = 3;
  uint64 epoch_version = 4;
  uint64 epoch_conf_version = 5;
  repeated RegionPeer peers = 6;
}

message SplitCommand {
  uint64 parent_region_id = 1;
  bytes split_key = 2;
  RegionMeta child = 3;
}

message MergeCommand {
  uint64 target_region_id = 1;
  uint64 source_region_id = 2;
}

message AdminCommand {
  enum Type {
    UNKNOWN = 0;
    SPLIT = 1;
    MERGE = 2;
  }
  Type type = 1;
  SplitCommand split = 2;
  MergeCommand merge = 3;
}
